--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Resource Files">
@@ -157,9 +157,6 @@
       <Filter>GameObjects\3D\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="firstpersoncam.h">
-      <Filter>GameObjects\3D\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Collision.h">
       <Filter>GameObjects\3D\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
