--- a/Textures/Textures.vcxproj.filters
+++ b/Textures/Textures.vcxproj.filters
@@ -5,4 +5,7 @@
     <ImageContentTask Include="grass.jpg" />
     <ImageContentTask Include="white.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\Models\glass cube.png" />
+  </ItemGroup>
 </Project>
